--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 .topnav {
-    overflow: hidden;
     background-color: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 50%;
   }
   .topnav a {
     font-family: Rockwell,Courier Bold,Courier,Georgia,Times,Times New Roman,serif;
     float: left;
-    display: block;
+    display: flex;
     color:white;
     text-align: center;
     padding: 22px 26px;
@@ -17,7 +18,7 @@
     transition-delay: 0.15s;
     background-color: rgb(0, 0, 33);
     border-radius: 5%;
-    margin: 10px 10px 10px 10px
+    margin: 1vh 1vh 1vh 1vh;
   }
   .topnav a:hover {
     background-color: lightblue;
@@ -87,11 +88,14 @@
     background: #212121;
   }
   hr{
+    width: 100%;
     color: white;
   }
   .connection h2{
     color:white;
-    text-align: right;
+    position: inherit;
+    margin-left: 10%;
+    padding-left: 10%;
   }
   .connection h1{
     color:white;
@@ -104,8 +108,8 @@
   }
 
   .map{
-    width: 600px;
-    height: 400px;
+    width: 50%;
+    height: 50%;
   }
 
   .text{
@@ -115,9 +119,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
-    width: 500px;
+    height: 5%;
+    width: 10%;
     position: relative;
-    left:900px;
-    top: -250px;
+    left: 50%;
+    top: -420px;
   }
